# bizarre-engine-new

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: basic.frag  basic.vert  basic_composition.frag  basic_composition.vert  basic_deferred.frag  basic_deferred.vert  cube_deferred.vert  deferred.vert
crates/bizarre_app/: Cargo.toml
crates/bizarre_app/src/: app.rs  app_builder.rs  app_event.rs  app_state.rs  default_app_module.rs  ecs_module_buffer.rs  lib.rs
crates/bizarre_config/: Cargo.toml  Cargo.toml~  be_config.toml
crates/bizarre_config/src/: lib.rs
crates/bizarre_core/: Cargo.toml
crates/bizarre_core/src/: bit_buffer.rs  bit_vec.rs  builder.rs  erased_buffer.rs  handle.rs  lib.rs  utils.rs
crates/bizarre_ecs/: Cargo.toml
crates/bizarre_ecs/examples/: system_graph.rs
crates/bizarre_ecs/macros/: Cargo.toml
crates/bizarre_ecs/macros/src/: component.rs  component_batch.rs  component_batch.rs~  lib.rs  resource.rs
crates/bizarre_ecs/src/: entity.rs  lib.rs  test_commons.rs  world.rs
crates/bizarre_ecs/src/commands/: command_buffer.rs  mod.rs
crates/bizarre_ecs/src/component/: component_batch.rs  component_cmd.rs  component_commands.rs  component_storage.rs  error.rs  mod.rs
crates/bizarre_ecs/src/entity/: builder.rs  component_result.rs  component_storage.rs  entities.rs  entity_builder.rs  entity_commands.rs  error.rs  fetch.rs  fetch_mut.rs  iterator.rs  mod.rs  query.rs  query_data.rs  query_element.rs  query_iterator.rs  query_old.rs
crates/bizarre_ecs/src/query/: fetch.rs  mod.rs  query_data.rs  query_element.rs  query_iterator.rs  res.rs
crates/bizarre_ecs/src/resource/: error.rs  mod.rs  registry.rs  resource.rs  resource_cmd.rs  resource_commands.rs
crates/bizarre_ecs/src/system/: error.rs  functional_system.rs  local.rs  mod.rs  schedule.rs  system_commands.rs  system_config.rs  system_graph.rs  system_param.rs
crates/bizarre_ecs/src/world/: command_queue.rs  commands.rs  ecs_module.rs  mod.rs  unsafe_world_cell.rs  world_unsafe_cell.rs
crates/bizarre_engine/: Cargo.toml
crates/bizarre_engine/src/: lib.rs
crates/bizarre_engine/src/ecs_modules/: input_module.rs  mod.rs  sdl_module.rs  window_module.rs
crates/bizarre_event/: Cargo.toml
crates/bizarre_event/src/: event.rs  event_queue.rs  event_reader.rs  lib.rs  typed_event_queue.rs
crates/bizarre_input/: Cargo.toml  Cargo.toml~
crates/bizarre_input/macros/: Cargo.toml
crates/bizarre_input/macros/src/: define_keys.rs  lib.rs
crates/bizarre_input/src/: event.rs  event.rs~  input_manager.rs  input_manager.rs~  key.rs~  keyboard.rs  keyboard.rs~  lib.rs  mouse.rs
crates/bizarre_log/: Cargo.toml  Cargo.toml~
crates/bizarre_log/src/: escape_code.rs  lib.rs  log_target.rs  log_target.rs~  log_thread.rs  logger.rs  logger.rs~  logger_builder.rs  logger_builder.rs~  macros.rs  macros.rs~
crates/bizarre_memory/: Cargo.toml
crates/bizarre_memory/src/: lib.rs
crates/bizarre_memory/src/arena/: typed.rs  untyped.rs
crates/bizarre_render/: Cargo.toml
crates/bizarre_render/assets/shaders/core/: example.vert
crates/bizarre_render/examples/: instance.rs
crates/bizarre_render/src/: antialiasing.rs  asset_manager.rs  debug_messenger.rs  device.rs  ecs.rs  image.rs  instance.rs  lib.rs  macros.rs  mesh.rs  present_target.rs  render_assets.rs  render_pass.rs  render_target.rs  renderer.rs  resource_manager.rs  shader.rs  submitter.rs  vertex.rs  vulkan_context.rs
crates/bizarre_render/src/buffer/: mod.rs
crates/bizarre_render/src/device/: logical_device.rs  mod.rs  physical_device.rs
crates/bizarre_render/src/material/: #pipeline.rs#  builtin.rs  descriptor_buffer.rs  instance_binding.rs  material_binding.rs  material_instance.rs  mod.rs  pipeline.rs  pipeline_features.rs
crates/bizarre_render/src/render_components/: camera.rs
crates/bizarre_render/src/scene/: light.rs  mod.rs  object_pass.rs  render_batch.rs  render_object.rs  scene_frame.rs
crates/bizarre_sdl/: Cargo.toml
crates/bizarre_sdl/src/: context.rs  lib.rs
crates/bizarre_sdl/src/input/: input_event.rs  mod.rs
crates/bizarre_sdl/src/window/: create_info.rs  mod.rs  window_event.rs
crates/bizarre_utils/: Cargo.toml
crates/bizarre_utils/macros/: Cargo.toml
crates/bizarre_utils/macros/src/: lib.rs
crates/bizarre_utils/src/: glm_ext.rs  lib.rs
crates/bizarre_window/: Cargo.toml
crates/bizarre_window/src/: lib.rs  linux.rs  platform_window.rs  window.rs  window_action.rs  window_create_info.rs  window_ecs.rs  window_error.rs  window_events.rs  window_manager.rs  window_systems.rs
crates/bizarre_window/src/linux/: linux_window.rs  mod.rs  wayland.rs  x11.rs
crates/bizarre_window/src/linux/wayland/: #wl_context.rs#  mod.rs  shared_memory.rs  shared_memory.rs~  wayland_context.rs  wayland_window.rs  wayland_window_trait_impl.rs  wl_context.rs  wl_window.rs  wl_window_state.rs
crates/bizarre_window/src/linux/x11/: connection.rs  motif_hints.rs  x11_error.rs  x11_event.rs  x11_event_queue.rs  x11_window.rs  x11_window_action.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs  sandbox_module.rs
src/: lib.rs
