[workspace]
resolver = "2"
members = [
    "sandbox",
    "crates/bizarre_app",
    "crates/bizarre_window",
    "crates/bizarre_event",
    "crates/bizarre_engine",
    "crates/bizarre_core",
    "crates/bizarre_ecs",
    "crates/bizarre_memory",
    "crates/bizarre_utils",
    "crates/bizarre_input",
    "crates/bizarre_log",
    "crates/bizarre_config",
    "crates/bizarre_render", 
]
default-members = ["sandbox", "crates/bizarre_engine"]

[workspace.dependencies]
nalgebra-glm = "0.18.0"
anyhow = "1.0.82"
thiserror = "1.0.61"
bitflags = "2.6.0"
lazy_static = "1.5.0"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["default", "derive"] }
toml = "0.8.19"
