[package]
name = "bizarre_ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

bizarre_ecs_proc_macro = { version = "0.1.0", path = "macros" }
bizarre_memory = { version = "0.1.0", path = "../bizarre_memory" }
bizarre_utils = { version = "0.1.0", path = "../bizarre_utils" }
bitflags = { workspace = true }
petgraph = "0.6.5"
