[package]
name = "bizarre_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bizarre_app = { version = "0.1.0", path = "../bizarre_app" }
bizarre_core = { version = "0.1.0", path = "../bizarre_core" }
bizarre_ecs = { version = "0.1.0", path = "../bizarre_ecs" }
bizarre_event = { version = "0.1.0", path = "../bizarre_event" }
bizarre_window = { version = "0.1.0", path = "../bizarre_window" }
bizarre_input = {version = "0.1.0", path = "../bizarre_input"}
bizarre_log = {version = "0.1.0", path = "../bizarre_log"}
