[package]
name = "bizarre_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bizarre_app = { version = "0.1.0", path = "../bizarre_app" }
bizarre_core = { version = "0.1.0", path = "../bizarre_core" }
bizarre_ecs = { version = "0.1.0", path = "../bizarre_ecs" }
bizarre_event = { version = "0.1.0", path = "../bizarre_event" }
bizarre_log = {version = "0.1.0", path = "../bizarre_log"}
bizarre_render = { version = "0.1.0", path = "../bizarre_render" }
bizarre_sdl = { version = "0.1.0", path = "../bizarre_sdl" }

nalgebra-glm = { workspace = true }

[features]
default = []
