[package]
name = "bizarre_window"
version = "0.1.0"
edition = "2021"

[dependencies]
xcb = { version = "1.4.0", optional = true, features = ["debug_atom_names"] }
wayland-client = { version = "0.31.2", optional = true }
wayland-protocols = { version = "0.31.2", optional = true, features = [
    "client",
] }
wl_sctk = { package = "smithay-client-toolkit", version = "0.18.1", optional = true }
tempfile = { version = "3.10.1", features = ["nightly"] }
nalgebra-glm = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["x11"]
x11 = ["dep:xcb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols", "dep:wl_sctk"]
