[package]
name = "bizarre_window"
version = "0.1.0"
edition = "2021"

[dependencies]
bizarre_event = { version = "0.1.0", path = "../bizarre_event" }

nalgebra-glm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true } 

xcb = { version = "1.4.0", optional = true, features = [
    "debug_atom_names",
    "xkb",
] }
wayland-client = { version = "0.31.6", optional = true }
wayland-protocols = { version = "0.32.4", optional = true, features = [
  "client",
  "unstable"
] }
tempfile = { version = "3.10.1", features = ["nightly"] }
bizarre_core = { version = "0.1.0", path = "../bizarre_core" }
bizarre_ecs = { version = "0.1.0", path = "../bizarre_ecs" }
cfg-if = "1.0.0"
rustix = { version = "0.38.37", features = ["std", "use-libc-auxv", "mm", "shm"] }

[features]
default = ["wayland", "x11"]
x11 = ["dep:xcb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols"]
